syntax = "proto3";

option csharp_namespace = "ChatService.DAL.Grpc.Services.Estate";

import "google/protobuf/timestamp.proto";

package estate;

service EstateGrpcServiceProto {
    rpc GetEstate (EstateRequest) returns (EstateResponse);
    rpc GetEstateList (EstateListRequest) returns (EstateListResponse);
    rpc GetUserEstate (UserEstateRequest) returns (EstateListResponse);
    rpc GetUserEstateCount (EstateCountRequest) returns (EstateCountResponse);
}

enum EstateType
{
    None = 0;
    Apartment = 1;
    House = 2;
}

message ProtoProfileModel {
    string id = 1;
    string auth0Id = 2;
    string first_name = 3;
    string last_name = 4;
    string phone_number = 5;
    google.protobuf.Timestamp birth_date = 6;
}

message ProtoEstateModel {
    string id = 1;
    ProtoProfileModel user = 2;
    EstateType type = 3;
    string address = 4;
    int32 area = 5;
    int32 rooms_count = 6;
    string price = 7;
    google.protobuf.Timestamp created_at = 8;
    string user_id = 9;
}

message EstateRequest {
    string id = 1;
}

message EstateResponse {
    ProtoEstateModel estate = 1;

    int32 statusCode = 2;
    string message = 3;
}

message EstateCountRequest {
    string user_id = 1;
}

message EstateCountResponse {
    int32 count = 1;

    int32 statusCode = 2;
    string message = 3;
}

message UserEstateRequest {
    string userId = 1;
}

message EstateListRequest {
    repeated string estateIds = 1;
}

message EstateListResponse {
    repeated ProtoEstateModel estateList = 1;

    int32 statusCode = 2;
    string message = 3;
}
